--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 0.5rem;
+  margin-left: 3.5rem;
 
   &__column {
     display: flex;
