--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -48,7 +48,7 @@
   width: 2.5rem;
   font-size: 1.5rem;
   cursor: pointer;
-  padding-bottom: 2.5rem;
+  // padding-bottom: 0.5rem;
 
   @include respond(phone) {
     display: none;
