minor text tweeks

--- a/css/style.css
+++ b/css/style.css
@@ -204,11 +204,13 @@ button:focus {
     transition: all 0.5s;
     backface-visibility: hidden;
     text-transform: uppercase;
-    font-size: 1.7rem;
+    font-size: 2rem;
     transform: translate(-50%, -500%); }
   .projects h4 {
-    font-size: 1.2rem;
+    font-size: 1.7rem;
     color: #7ed56f; }
+  .projects p {
+    font-size: 1.2rem; }
   .projects:hover .projects__caption {
     opacity: 1;
     transform: translate(-50%, -250%); }
