--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ button:focus {
   position: relative; }
   .projects__img {
     backface-visibility: hidden;
+    overflow: hidden;
     transition: all 0.5s; }
   .projects__text {
     position: absolute;
@@ -209,14 +210,24 @@ button:focus {
   .projects h4 {
     font-size: 1.7rem;
     color: #7ed56f; }
+    @media only screen and (max-width: 37.5em) {
+      .projects h4 {
+        font-size: 1.3rem;
+        margin-bottom: 0 !important; } }
   .projects p {
     font-size: 1.2rem; }
   .projects:hover .projects__caption {
     opacity: 1;
     transform: translate(-50%, -250%); }
+    @media only screen and (max-width: 37.5em) {
+      .projects:hover .projects__caption {
+        transform: translate(-50%, -190%); } }
   .projects:hover .projects__text {
     opacity: 1;
     transform: translate(-50%, -20%); }
+    @media only screen and (max-width: 37.5em) {
+      .projects:hover .projects__text {
+        transform: translate(-50%, -35%); } }
   .projects:hover .projects__img {
     transform: scale(0.9);
     filter: blur(3px) brightness(40%); }
