--- a/sass/components/_image-hover.scss
+++ b/sass/components/_image-hover.scss
@@ -8,6 +8,7 @@
 
   &__img {
     backface-visibility: hidden;
+    overflow: hidden;
     transition: all 0.5s;
   }
 
@@ -30,6 +31,10 @@
   & h4 {
     font-size: 1.7rem;
     color: $color-primary-light;
+    @include respond(phone) {
+      font-size: 1.3rem;
+      margin-bottom: 0 !important;
+    }
   }
 
   & p {
@@ -39,11 +44,19 @@
   &:hover &__caption {
     opacity: 1;
     transform: translate(-50%, -250%);
+
+    @include respond(phone) {
+      transform: translate(-50%, -190%);
+    }
   }
 
   &:hover &__text {
     opacity: 1;
     transform: translate(-50%, -20%);
+
+    @include respond(phone) {
+      transform: translate(-50%, -35%);
+    }
   }
 
   &:hover &__img {
