--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,11 @@ ul {
   animation-duration: 1s;
   animation-timing-function: ease-out; }
 
+.projects-text {
+  max-width: 80%;
+  margin: auto;
+  font-size: 1.5rem; }
+
 .u-center-text {
   text-align: center; }
 
