--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ button:focus {
     transform: scale(0.95); }
 
 .projects__card {
-  max-width: 40rem;
+  width: 100%;
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
@@ -284,12 +284,12 @@ button:focus {
       display: none; } }
 
 .slider__btn--left {
-  left: 11%;
-  transform: translate(-50%, -50%); }
+  left: 6%;
+  transform: translate(-50%, 0%); }
 
 .slider__btn--right {
-  right: 11%;
-  transform: translate(50%, -50%); }
+  right: 6%;
+  transform: translate(50%, 0%); }
 
 .dots {
   position: absolute;
