soft skills added

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,6 +19,14 @@
   }
 }
 
+.soft-skills {
+  margin: 5rem 0 2rem 0;
+
+  &__text {
+    font-size: 1.5rem;
+  }
+}
+
 .projects-text {
   max-width: 80%;
   margin: auto;
