--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,11 @@ ul {
   animation-duration: 1s;
   animation-timing-function: ease-out; }
 
+.soft-skills {
+  margin: 5rem 0 2rem 0; }
+  .soft-skills__text {
+    font-size: 1.5rem; }
+
 .projects-text {
   max-width: 80%;
   margin: auto;
